# flexycon

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .prettierrc  Makefile  README.md  bootstrap.sh  config-windows.yaml  config.yaml  files.py  flexycon.py  mypy.ini  noxfile.py  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.py  stylua.toml
config/: mimeapps.list
config/Code - OSS/: extensions.txt
config/Code - OSS/User/: keybindings.json  settings.json
config/alacritty/: alacritty.toml
config/bottom/: bottom.toml
config/dunst/: dunstrc
config/firefox/: user.js
config/firefox/chrome/: userChrome.css  userContent.css
config/gallery-dl/: config.json  example-config.json
config/git/: config.ini
config/kitty/: kitty.conf
config/lf/: icons  lfrc
config/mpv/: mpv.conf
config/newsraft/: config
config/nsxiv/exec/: key-handler
config/nvim/: init.vim
config/rclone/: rclone.conf
config/shell/: aliasrc  bm-dirs  bm-files  profile
config/starship/: starship.toml
config/task/: taskrc
config/x11/: xprofile
config/yay/: config.json
config/yazi/: init.lua  keymap.toml  package.toml  theme.toml  yazi.toml
config/zathura/: zathurarc
config/zsh/: .zprofile  zshrc
docs/: README.md  dev.md
dotfiles/config/: mimeapps.list
dotfiles/config/alacritty/: alacritty.toml  alacritty.toml.j2
dotfiles/config/amethyst/: amethyst.yml
dotfiles/config/bash/: profile.sh
dotfiles/config/bottom/: bottom.toml
dotfiles/config/dunst/: dunst.conf  dunstrc
dotfiles/config/firefox/: README.md  user.js  user.js.j2
dotfiles/config/fontconfig/: fonts.conf
dotfiles/config/gallery-dl/: config.json  config.jsonc  example-config.json
dotfiles/config/git/: config.ini
dotfiles/config/gtk-3.0/: settings.ini
dotfiles/config/hammerspoon/: init.lua
dotfiles/config/kitty/: kitty.conf
dotfiles/config/mpv/: input.conf
dotfiles/config/newsraft/: feeds
dotfiles/config/nvim/: init.lua  init.vim
dotfiles/config/python/: startup.py
dotfiles/config/shell/: aliases.sh  aliases.sh.j2  aliasrc  aliasrc.sh.j2  bm-dirs.sh.j2  bm-files.sh.j2  functions.sh  profile.sh  profile.sh.j2
dotfiles/config/skhd/: config.conf
dotfiles/config/starship/: starship.toml  yazi_cfg.toml
dotfiles/config/task/: contexts
dotfiles/config/vscode/: extensions.txt  keybindings.json  settings.json
dotfiles/config/x11/: xinitrc  xprofile  xresources
dotfiles/config/yabai/: config.conf
dotfiles/config/yay/: config.json
dotfiles/config/yazi/: init.lua  keymap.toml  package.toml  theme.toml  yazi.toml
dotfiles/config/yt-dlp/: config
dotfiles/config/zathura/: zathura.conf  zathurarc
dotfiles/config/zsh/: .zshrc.sh.j2  config.sh  functions.sh
dotfiles/cron/: crontog.sh
dotfiles/scripts/: dmenuhandler.sh  dmenurecord.sh  flx_utils.py  journal_entry.py  mounter.sh  screenshot_utility.py
dotfiles/scripts/cron/: checkup.sh
dotfiles/scripts/git_logs/: main.py  requirements.txt  run.sh
dotfiles/scripts/journal_entry/: main.py  requirements.txt  run.sh
dotfiles/scripts/jsonc_to_json/: main.py  run.sh
dotfiles/scripts/media_server/: main.py
dotfiles/scripts/rclone_fmt/: run.sh
dotfiles/scripts/screenshot_utility/: main.py  run.sh
dotfiles/scripts/user_shortcuts/: main.py  requirements.txt  run.sh
dotfiles/scripts/ushortcuts/: run.sh
dotfiles/share/applications/: file.desktop  img.desktop  text.desktop
dotfiles/share/unicode/: alphanum  emoji  flags  icons  math
dotfiles/src/: sdir.sh
dotfiles/src/common/: args.py  helpers.py  io_utilities.py  logger.py  media.py  prompt_utilities.py  screenshot_utilities.py  statusbar.py  variables.py
dotfiles/src/installer/: install.py  packages.py
dotfiles/src/journal_entry/: main.py
dotfiles/src/jsonc_to_json/: requirements.txt
dotfiles/src/media_server/: requirements.txt
dotfiles/src/rclone_fmt/: main.py
dotfiles/src/scripts/: dmenurecord.sh  noisereduce.sh  py-run.sh  remaps.sh  select_unicode.sh  sysact.sh  system_actions.py
dotfiles/src/shared/: setup.py
dotfiles/src/statusbar/: README.md  news.py  recording.py  volume.py
dotfiles/src/userscripts/: mediaServerClient.js
share/applications/: file.desktop  text.desktop
share/unicode/: braille
src/: bookmarks.py  install.py  packages.py  packages_old.py  sqlite_db_backup.py  utils.py  yt-download-backup.py
src/common/: clipboard_utilities.py  cmd_utilities.py  helpers.py  io_utilities.py  logger.py  media.py  notification_utilities.py  package_utilities.py  prompt_utilities.py  screenshot_utilities.py  statusbar.py  string_utilities.py  system_utilities.py  variables.py  window_manager_utilities.py
src/common/apps/: window_manager.py
src/dunst/: config.py  fetch-config.py  read-config.py  test.py
src/file_downloader/: client.js  server.py
src/git-iter/: main.py
src/rclone_fmt/: main.py  requirements.txt
src/scripts/: template.py  yt-download-backup.py
src/scripts/continuous_diff/: main.py
src/scripts/documents_syncer/: main.py
src/scripts/dunst_config_compiler/: main.py
src/scripts/file_renamer/: main.py
src/scripts/flexy/: README.md  main.py
src/scripts/git_logs/: main.py
src/scripts/image_generator/: main.py
src/scripts/journal_entry/: main.py
src/scripts/jsonc_to_json/: main.py
src/scripts/keyboard_manager/: main.py
src/scripts/keyboard_select/: main.py
src/scripts/media_manager/: main.py
src/scripts/nsxiv_key_handler/: main.py
src/scripts/package_installer/: main.py
src/scripts/rclone_wrapper/: main.py
src/scripts/screenshot_utility/: main.py
src/scripts/select_unicode/: main.py
src/scripts/sqlite_db_backup/: main.py
src/statusbar/: battery.py  date.py  date.sh  internet.py  network.py  news.py  recording.py  rss.py  sound.py  tasks.py  template.py  todos.py  volume.py
src/userscripts/: cleanUrl.js  openUrlsInTabs.js
tests/common/: test_bool_prompt.py  test_helpers.py  test_remove_empty_dirs.py  test_remove_files_by_pattern.py  test_split_into_words.py  test_string_converters.py  test_truncate.py
(+200 files in other folders)
