[project]
authors = [{ name = "Zen-Path", email = "zen.path@tuta.com" }]
dependencies = [
    "colorama==0.4.6",    # [util] for colored text
    "Flask==3.1.1",       # [script] for media_server
    "flask-cors==6.0.0",  # [script] for media_server
    "GitPython==3.1.44",  # [script] for git_logs
    "tabulate==0.9.0",    # [script] for rclone_fmt
    "commentjson==0.9.0", # [script] for jsonc_to_json
]
description = "Flexible programmatic configuration."
name = "flexycon"
readme = "README.md"
requires-python = ">=3.13"
version = "1.0.0"

[build-system]
build-backend = "hatchling.build"
requires      = ["hatchling"]

[tool.hatch.build]
sources = ["dotfiles/src"]

[tool.hatch.version]
source = "project"

[tool.hatch.envs.dev]
dependencies = [
    "pre_commit==4.2.0",                 # [dev] for pre-commit git hooks
    "black==25.1.0",                     # [dev] for formatting
    "mypy==1.16.1",                      # [dev] for type checking
    "types-colorama==0.4.15.20240311",   # [dev] mypy types
    "types-Flask-Cors==6.0.0.20250520",  # [dev] mypy types
    "types-psutil==7.0.0.20250601",      # [dev] mypy types
    "types-setuptools==80.9.0.20250529", # [dev] mypy types
    "types-tabulate==0.9.0.20241207",    # [dev] mypy types
]
develop = false

[tool.hatch.envs.prod]
dependencies = []
develop      = false
