[build-system]
build-backend = "setuptools.build_meta"
requires      = ["setuptools>=61.0", "wheel"]

[project]
authors = [
    { name = "Zen-Path", email = "zen.path@tuta.com" },
]
dependencies = [
    "pip>=26.0",

    "dotdrop==1.15.0",      #  for dotfile management
    "python-magic==0.4.27", # for dotdrop on windows

    # util
    "colorama==0.4.6",      # for colored text
    "python-dotenv==1.1.1", # for loading env variables
    "PyYAML==6.0.3",        # for parsing yaml files

    # script
    "GitPython==3.1.44",  # for git_logs
    "tabulate==0.9.0",    # for rclone_fmt
    "humanize==4.14.0",   # for rclone_fmt
    "pydantic==2.12.3",   # for rclone_fmt
    "commentjson==0.9.0", # for jsonc_to_json

    # dev
    "pre_commit==4.2.0", # for pre-commit git hooks
    "black==25.1.0",     # for formatting
    "mypy==1.16.1",      # for type checking
    "ruff==0.14.13",     # linter and formatter

    # test
    "pytest==8.4.2", # for running test suites

    # mypy types
    "types-PyYAML==6.0.12.20250915",
    "types-colorama==0.4.15.20240311",
    "types-psutil==7.0.0.20250601",
    "types-setuptools==80.9.0.20250529",
    "types-tabulate==0.9.0.20241207",
    "types-requests==2.32.4.20250913",
]
description = " Flexible programmatic configuration."
name = "flexycon"
readme = "README.md"
requires-python = ">=3.12"
version = "0.0.1"

[tool.setuptools.packages.find]
where = ["dotfiles/src"]

[tool.mypy]
explicit_package_bases = true
ignore_missing_imports = true
mypy_path              = "dotfiles/src"
strict_optional        = true

[tool.pytest.ini_options]
markers = [
    "ui: checks that require a browser/playwright",
    "slow: marks tests as slow",
]

[tool.ruff]
# Same as Black
indent-width = 4
line-length  = 88

target-version = "py314"

    [tool.ruff.lint]
    # "E" - pycodestyle
    # "F" - pyflakes
    # "I" - isort
    ignore = ["E501"]
    select = ["E", "F", "I"]

    # Allow fix for all enabled rules (when `--fix`) is provided.
    fixable   = ["ALL"]
    unfixable = []

    [tool.ruff.format]
    # Same as Black
    indent-style              = "space"
    line-ending               = "auto"
    quote-style               = "double"
    skip-magic-trailing-comma = false
